# rust-consumer-rabbitMQ

./: Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/application/: message_service.rs
src/config/: mod.rs
src/domain/: message.rs
src/infrastructure/: mod.rs  mongo_repository.rs  rabbitmq_consumer.rs
