[package]
name = "rust-consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11.6"
futures-lite = "1.12.0"
futures = "0.3"
dotenv = "0.15"
lapin = "2.0" # RabbitMQ client
mongodb = "2.0" # MongoDB client
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

